# btop-desktop

./: README.md  meson.build
data/: btop-desktop.desktop.in.in  meson.build
snap/: snapcraft.yaml
src/: btop-desktop.c
